--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     This is Calculator
+    Synchronous
     I just became a collaborator !
     Its me Srihari
     Doing something
