--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
     This is Calculator
     Synchronous
+    Synchronous222
     I just became a collaborator !
     Its me Srihari
     Doing something
