--- a/main.html
+++ b/main.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
     <title>Calculator</title>
 </head>
 <body>
-    This is Calculator
+    <div class="mainBox">
+        <div class="display">
+
+        </div>
+    </div>
 </body>
 </html>
