--- a/main.html
+++ b/main.html
@@ -9,9 +9,31 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="mainBox">
-        <div class="display">
-
+    <div id="mainBox">
+        <div id="display" onclick="callFunc()"></div>
+        <div class="row">
+            <div class="box">7</div>
+            <div class="box">8</div>
+            <div class="box">9</div>
+            <div class="box">CE</div>
+        </div>
+        <div class="row">
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+            <div class="box">+</div>
+        </div>
+        <div class="row">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">-</div>
+        </div>
+        <div class="row">
+            <div class="box">.</div>
+            <div class="box">0</div>
+            <div class="box">=</div>
+            <div class="box">*</div>
         </div>
     </div>
 </body>
