--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="mainBox">
-        <div id="display" onclick="callFunc()"></div>
+        <div id="display"></div>
         <div class="row">
             <div class="box">7</div>
             <div class="box">8</div>
