--- a/main.html
+++ b/main.html
@@ -10,31 +10,34 @@
 </head>
 <body>
     <div id="mainBox">
+
         <div id="display"></div>
+
         <div class="row">
-            <div class="box">7</div>
-            <div class="box">8</div>
-            <div class="box">9</div>
-            <div class="box">CE</div>
+            <div class="box" onclick="buttonClicked(this)">7</div>
+            <div class="box" onclick="buttonClicked(this)">8</div>
+            <div class="box" onclick="buttonClicked(this)">9</div>
+            <div class="box" onclick="buttonClicked(this)">CE</div>
         </div>
         <div class="row">
-            <div class="box">4</div>
-            <div class="box">5</div>
-            <div class="box">6</div>
-            <div class="box">+</div>
+            <div class="box" onclick="buttonClicked(this)">4</div>
+            <div class="box" onclick="buttonClicked(this)">5</div>
+            <div class="box" onclick="buttonClicked(this)">6</div>
+            <div class="box" onclick="buttonClicked(this)">+</div>
         </div>
         <div class="row">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">-</div>
+            <div class="box" onclick="buttonClicked(this)">1</div>
+            <div class="box" onclick="buttonClicked(this)">2</div>
+            <div class="box" onclick="buttonClicked(this)">3</div>
+            <div class="box" onclick="buttonClicked(this)">-</div>
         </div>
         <div class="row">
-            <div class="box">.</div>
-            <div class="box">0</div>
-            <div class="box">=</div>
-            <div class="box">*</div>
+            <div class="box" onclick="buttonClicked(this)">.</div>
+            <div class="box" onclick="buttonClicked(this)">0</div>
+            <div class="box" onclick="buttonClicked(this)">=</div>
+            <div class="box" onclick="buttonClicked(this)">*</div>
         </div>
+
     </div>
 </body>
 </html>
